--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             clock: <circle cx="12" cy="12" r="10"/>
         };
 
-        // --- CONTENT DATA (Mit stabilen Bild-Links) ---
+        // --- CONTENT DATA (Mit reparierten Bild-Links) ---
         const BLOG_CONTENT = [
             { 
                 id: 1, 
@@ -89,8 +89,8 @@
                 time: "5 min", 
                 date: "12. Okt 2024", 
                 author: "Dr. med. Weber", 
-                // Bild: Jogging im Freien
-                image: "https://images.unsplash.com/photo-1559839734-2b71ea86b48e?auto=format&fit=crop&w=800", 
+                // NEUES BILD: Läufer in der Natur (sehr zuverlässig)
+                image: "https://images.unsplash.com/photo-1552674605-469523f54050?auto=format&fit=crop&w=800&q=80", 
                 color: "bg-blue-100", 
                 icon: paths.activity, 
                 desc: "Neue Studien zeigen: Es sind nicht nur die Gene. Erfahren Sie, wie kleine Anpassungen in Ihrer Routine Ihr biologisches Alter senken.",
@@ -134,8 +134,8 @@
                 time: "6 min", 
                 date: "08. Okt 2024", 
                 author: "M. Psych. Bauer", 
-                // Bild: Frau liest Buch
-                image: "https://images.unsplash.com/photo-1521356279905-e1d72a68770d?auto=format&fit=crop&w=800", 
+                // NEUES BILD: Frau liest Buch im Bett (sehr zuverlässig)
+                image: "https://images.unsplash.com/photo-1544716278-ca5e3f4abd8c?auto=format&fit=crop&w=800&q=80", 
                 color: "bg-purple-100", 
                 icon: paths.coffee, 
                 desc: "Wie ständige Erreichbarkeit Ihren Hormonhaushalt beeinflusst und was Sie dagegen tun können.",
