--- a/index.html
+++ b/index.html
@@ -173,7 +173,33 @@
                     "Technologie hilft: Smartwatches können heute Vorhofflimmern erkennen, bevor Symptome spürbar sind. Kombiniert mit regelmäßigen Blutbildern, die über das Standard-Profil hinausgehen, ist Prävention heute so präzise wie nie zuvor.",
                     "Sprechen Sie Ihren Arzt aktiv auf hs-CRP und Lipoprotein(a) an – Ihr Herz wird es Ihnen danken."
                 ]
-            }
+            },
+            {
+    id: 5,
+    title: "Eine ist keine",
+    cat: "Prävention",
+    time: "5 min",
+    author: "Dr. Lisa Neubauer",
+    image: "Rauchen.jpg",
+    color: "bg-orange-100",
+    icon: paths.ciagrette,
+    desc: "Warum Rauchen dich auf Dauer krank macht.",
+    fullText: [
+        "Rauchen ist eines der größten vermeidbaren Gesundheitsrisiken weltweit und verursacht jährlich Millionen Tode durch Krebs, Herz-Kreislauf-Erkrankungen und Atemwegserkrankungen.",
+        "Gesundheitliche Schäden:",
+        "Rauchen schädigt nahezu jedes Organ im Körper. Nikotin und über 7.000 Chemikalien im Tabakrauch, darunter 70 krebserregende Stoffe, führen zu Lungenkrebs (ca. 85% der Fälle), COPD und Emphysem. Passivrauchen erhöht das Risiko für Nichtraucher um 20–30% für Lungenkrebs und Herzinfarkte.",
+        "• Herz-Kreislauf: Erhöhtes Thromboserisiko, Bluthochdruck und Atherosklerose.",
+        "• Weitere Folgen: Unfruchtbarkeit, Schwangerschaftskomplikationen, Zahnverlust, Hautalterung.",
+        "Warum ist Aufhören so schwer?",
+        "Nikotin erzeugt starke Abhängigkeit durch Dopamin-Ausschüttung im Belohnungszentrum des Gehirns. Entzugserscheinungen wie Reizbarkeit, Schlafstörungen und Heißhunger treten nach Stunden auf. Vaping oder E-Zigaretten sind keine sichere Alternative, da sie Nikotin und Schadstoffe enthalten.",
+        "Tipps zum Aufhören:",
+        "• Schritt-für-Schritt-Plan: Setzen Sie ein konkretes Datum, werfen Sie Zigaretten weg und tracken Sie Erfolge.",
+        "• Hilfsmittel: Nikotinpflaster, Kaugummis oder Medikamente wie Vareniclin (auf Rezept); Apps wie QuitNow oder Rauchfrei-Challenges.",
+        "• Unterstützung: Beratung über Telefonseelsorge (0800 111 0 333) oder Gruppen; Sport und Entspannungstechniken reduzieren Stress.",
+        "Nach einem Jahr ohne Rauchen halbiert sich das Herzinfarktrisiko, nach 10 Jahren nähert es sich dem eines Nichtrauchers an. Starten Sie heute – Ihr Körper dankt es Ihnen langfristig. Bei Bedarf konsultieren Sie einen Arzt für personalisierte Strategien."
+    ]
+}
+                
         ];
 
         // --- HELPER ---
